@@ -24,7 +24,7 @@ dependencies {
             // You may comment out the database dependency you do not use
             'org.xerial:sqlite-jdbc:3.30.1',
             'org.apache.derby:derby:10.14.2.0',
-
+            'org.apache.commons:commons-csv:1.8',
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
             'com.google.inject:guice:4.2.2',
@@ -41,12 +41,19 @@ dependencies {
 }
 
 javafx {
-    version = "11"
+    version = "11.0.1"
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
 run {
-    standardInput = System.in
+    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
 }
 
 test {
